--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -11,7 +11,7 @@
                     <h5 class="header col s12 light">Aplicação Para Gestão de Eventos(Notas e Reuniões) de Alunos </h5>
                 </div>
                 <div class="row center">
-                    <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Faça Login</a>
+                    <a href="\login" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Faça Login</a>
                 </div>
                 <br>
                 <br>
