--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,4 +1,30 @@
 <template name="MainLayout">
+	{{> header}}
+    <div class="container body-container">
+		{{#if currentUser}}
+			<div class="row">
+				<div class="three columns sidebar">
+					{{> sidebar}}
+				</div>
+				<div class="nine columns content">
+					{{> Template.dynamic template=main}}
+				</div>
+			</div>
+		{{/if}}
+    </div>
+	<div class="processing">
+		<div class="modally">
+			<span class="loader">
+				<span class="loader-inner"></span>
+			</span>
+			<p>processing</p>
+		</div>
+	</div>
+</template>
+
+
+
+<template name="MainLayout_OLD">
 
         {{> Header}} 
         {{> SideNav}}
