add school managment

--- a/client/layouts/MainLayout.html
+++ b/client/layouts/MainLayout.html
@@ -1,5 +1,5 @@
 <template name="MainLayout">
-	{{> header}}
+	{{> Header}}
     <div class="container body-container">
 		{{#if currentUser}}
 			<div class="row">
