--- a/client/partials/Header_OLD.html
+++ b/client/partials/Header_OLD.html
@@ -1,4 +1,4 @@
-<template name="Header_New">
+<template name="Header">
 
     <header>
         <nav class="nav-extended">
@@ -120,7 +120,7 @@
     </header>
 </template>
 
-<template name="Header">
+<template name="Header_AA">
 
     <header>
         <nav class="white" role="navigation">
