--- a/client/partials/header_sissa.html
+++ b/client/partials/header_sissa.html
@@ -1,4 +1,4 @@
-<template name="header">
+<template name="header_sissa">
     <div class="header">
         <div class="container">
             <div class="row">
