--- a/client/partials/sidebar.html
+++ b/client/partials/sidebar.html
@@ -1,6 +1,6 @@
 <template name="sidebar">
     <ul class="sidebar-menu">
-        <li class="menu-item">
+        <!-- <li class="menu-item">
             <a href="/" class="button {{isActiveRoute class='active button-primary' name='home'}}"><i class="fa fa-home" aria-hidden="true"></i>  home</a>
         </li>
 
@@ -8,7 +8,7 @@
             {{> superAdminSidebar}}
         {{else}}
             {{> schoolUserSidebar}}
-        {{/if}}
+        {{/if}} -->
 
     </ul>
 </template>
